# DoomRPG-RE

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build-macos.sh  build-web.sh
.claude/: settings.json
.github/workflows/: deploy-pages.yml  docker-build.yml
data/: monsters.ini  player.ini  weapons.ini
docs/: BSP_FORMAT.md
src/: CMakeLists.txt  Combat.c  DoomCanvas.c  DoomCanvas.h  DoomRPG.c  DoomRPG.h  Game.c  Hud.c  IniFile.c  IniFile.h  Main.c  Menu.c  Player.c  SDL_Video.c  SDL_Video.h  Sound.c  Sound.h  Z_Zip.c  Z_Zone.c
tools/bsp-viewer/: index.html
web/: shell.html
